<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:gravity="center_horizontal"
        android:text="@string/textProducto"
        android:textSize="24sp"
        android:textColor="#00f"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/hintnombreProd" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtIndicaciones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/hintIndicaciones" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtContraIndicaciones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/hintContraIndicaciones" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtPrecio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="0123456789."
            android:inputType="numberDecimal"
            android:hint="@string/hintprecio" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtIVA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="No digite IVA"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtfoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Ingrese link de imagen"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:text="@string/textguardar"
        android:onClick="guardar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:text="@string/textcancelar"
        android:onClick="cancelar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:text="@string/textcomprar"
        android:onClick="comprar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>
